# compass-api-oxide

./: .swp  Cargo.toml
compass_api/: Cargo.toml
compass_api/src/: lib.rs
compass_api/src/database/: user.rs
compass_api/src/librus/: api.rs  client.rs  mod.rs  notice.rs  user.rs
compass_api/src/resolvers/: auth.rs  health.rs  mod.rs  notice.rs  user.rs
compass_api/src/routes/: graphql.rs  mod.rs
compass_api/src/schema/: mod.rs
compass_proc_macros/: Cargo.toml
compass_proc_macros/src/: lib.rs
migrations/: 20231213193247_create_users.sql
src/: lib.rs  main.rs
src/database/: mod.rs  user.rs
src/librus/: api.rs  client.rs  mod.rs  user.rs
src/resolvers/: user.rs
src/routes/: graphql.rs  mod.rs
src/schema/: mod.rs
