[package]
name = "compass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = "6.0.11"
async-graphql-poem = "6.0.11"
poem = { version = "1.3.59", features = ["server", "csrf", "anyhow", "cookie"] }
redis = { version = "0.24.0", features = ["r2d2", "tokio-comp", "connection-manager"] }
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "time", "uuid", "postgres", "macros"] }
time = { version = "0.3.30", features = ["serde", "macros"] }
tok = "0.0.0"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
