workspace = { members = ["compass_api", "compass_proc_macros"] }
[package]
name = "compass"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.35.0", features = ["full"] }
compass_api = { path = "compass_api" }
concat-idents = "1.1.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html