[package]
name = "compass_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.11", features = ["uuid", "time", "dataloader"] }
async-graphql-poem = "6.0.11"
async-trait = "0.1.74"
dotenvy = "0.15.7"
poem = { version = "1.3.59", features = ["server", "csrf", "anyhow", "cookie"] }
rand = "0.8.5"
redis = { version = "0.24.0", features = ["r2d2", "tokio-comp", "connection-manager"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
reqwest_cookie_store = "0.6.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "time", "uuid", "postgres", "macros"] }
time = { version = "0.3.30", features = ["serde", "macros"] }
tok = "0.0.0"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
compass_proc_macros = { path = "../compass_proc_macros" }
concat-idents = "1.1.5"
